--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: picto_widget
-description: A new Flutter package project.
-version: 0.0.1
+description: Create great apps with Pictograms using OTTAA Picto widget, we feature a minimalistic design to foster understanding. Each Picto must have and image, a text and a Fitzgerald key color frame. And you are good to go!
+version: 0.0.3
 homepage: https://github.com/OTTAA-Project/PictoWidget
 
 environment:
