Minor changes to Readme and License

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: picto_widget
-description: Create great apps with Pictograms using OTTAA Picto widget, we feature a minimalistic design to foster understanding. Each Picto must have and image, a text and a Fitzgerald key color frame. And you are good to go!
+description: Create great apps with Pictograms using OTTAA Picto widget, we feature a minimalistic design to foster understanding.
 version: 0.0.3
 homepage: https://github.com/OTTAA-Project/PictoWidget
 
